--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:react/recommended",
-        "prettier"
+        "prettier",
+        "plugin:storybook/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -25,6 +26,5 @@
         "react-hooks/exhaustive-deps": "error",
         "react/prop-types": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off"
-
     }
 }
